--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -2,12 +2,10 @@
 <h1>ユーザー情報</h1>
 <table class="table">
 	<tr><%= attachment_image_tag user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg" %></tr>
-
 	<tr>
 		<th>お名前</th>
 		<th><%= user.name %></th>
 	</tr>
-
 	<tr>
 		<th>自己紹介</th>
 		<th><%= user.introduction %></th>
@@ -33,5 +31,5 @@
 </table>
 
 <div class="row">
-	<%= link_to '', edit_user_path(user), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench edit_user_#{user.id}" %>
+	<%= link_to 'プロフィール編集', edit_user_path(user), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench edit_user_#{user.id}" %>
 </div>
