--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,5 +13,23 @@
  *= require_tree .
  *= require_self
  */
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "bulma";
+
+header {
+	background-image: linear-gradient(to top, #fcc5e4 0%, #fda34b 15%, #ff7882 35%, #c8699e 52%, #7046aa 71%, #0c1db8 87%, #020f75 100%);
+}
+
+.nav navbar-nav navbar-right {
+	color:blue;
+}
+
+body {
+	min-height: 100vh;
+	color: black;
+	background-image: linear-gradient(to right, #fa709a 0%, #fee140 100%);
+	font-family: sans-serif;
+}
+
