--- a/app/views/foods/_newfood.html.erb
+++ b/app/views/foods/_newfood.html.erb
@@ -1,25 +1,50 @@
-<h2>新規投稿</h2>
-<%= form_for(food) do |f| %>
-    <% if @food.errors.any? %>
-      <%= @food.errors.count %>
-      個のerrorがあります<br>
+<div class=containe>
+	<div class="row">
+		<br>
+		<h2 class="new-title" id="exa">新規投稿</h2>
+		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+			<span aria-hidden="true">&items;</span>
+		</button>
 
-      <% @food.errors.full_messages.each do |msg| %>
-      <%= msg %><br>
-      <% end %>
-      <% end %>
+		<%= form_for @food, remote: true do |f| %>
+		    <% if @food.errors.any? %>
+		        <%= @food.errors.count %>
+		        個のerrorがあります<br>
+		        <% @food.errors.full_messages.each do |msg| %>
+		        <%= msg %><br>
+		        <% end %>
+		    <% end %>
+		    <div class="form-group">
+		    	<div class="model-body">
+				    <tr>
+					    <div class="field-row">
+							<%= f.label :image, "イメージ" %>
+							<%= f.attachment_field :food_image, class: "food_image" %>
+						</div>
+					</tr>
 
-	<div class="field row">
-		<%= f.label :title %>
-		<%= f.text_field :title, class: "col-xs-12 food_title" %>
+					<tr>
+						<div class="field-row">
+							<%= f.label :title, "タイトル" %>
+							<%= f.text_field :title, class: "col-xs-12 food_title" %>
+						</div>
+					</tr>
+
+					<tr>
+						<div class="field-row">
+							<%= f.label :body, "内容" %>
+							<%= f.text_area :body, class: "col-xs-12 food_body" %>
+						</div>
+					</tr>
+				</div>
+					<div class="model-footer">
+						<tr>
+							<buttan type="button" class="btn btn-secondary" date-dismiss="model" >閉じる</buttan>
+								<%= f.submit "投稿する", class: "btn btn-primary col-xs-12 glyphicon glyphicon-hand-up" %>
+							</div>
+						</tr>
+					</div>
+			</div>
+		<% end %>
 	</div>
-
-	<div class="field row">
-		<%= f.label :body %>
-		<%= f.text_area :body, class: "col-xs-12 food_body" %>
-	</div>
-
-	<div class="actions row">
-		<%= f.submit class: "btn btn-primary col-xs-12" %>
-	</div>
-<% end %>
+</div>
