--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -9,9 +9,10 @@
 				<h2>投稿一覧</h2>
 				<thead>
 					<tr>
+						<th>ユーザー</th>
 						<th></th>
-						<th>Title</th>
-						<th>Opinion</th>
+						<th>タイトル</th>
+						<th>コメント</th>
 						<th colspan="3"></th>
 					</tr>
 				</thead>
@@ -20,8 +21,10 @@
 						<tr>
 							<td>
 								<%= link_to user_path(food.user) do %>
-									<%= attachment_image_tag(food.user, :profile_image, :fill, 35, 35, fallback: "no-image-mini.jpg") %>
+									<%= attachment_image_tag(food.user, :profile_image, :fill, 40, 40, fallback: "no-image-mini.jpg") %>
 								<% end %>
+							</td>
+							<td><%= attachment_image_tag food, :food_image, :fill, 40, 40, fallback: "no-image-mini.jpg" %>
 							</td>
 							<td><%= link_to food.title, food_path(food), class: "food_#{food.id}" %></td>
 							<td><%= food.body %></td>
@@ -41,6 +44,13 @@
 						  			<% end %>
 								</td>
 							<% end %>
+							<td>
+								<div class="card-link">
+								<%= link_to food_path(food), class: "button card-link-item" do %>
+									レビューを書く
+								<% end %>
+								</div>
+							</td>
 						</tr>
 					<% end %>
 				</tbody>
@@ -48,3 +58,42 @@
 		</div>
 	</div>
 </div>
+
+<section class="section mt-6">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-5">
+        <% @foods.each do |food| %>
+          <div class="card mb-6">
+            <header class="card-header">
+              <p class="card-header-title">
+                <%= food.title %>
+              </p>
+            </header>
+            <div class="card-content">
+              <div class="content">
+                <div class="content average-score">
+                  <div class="star-rating mb-2">
+                    <div class="star-rating-front" style="width: <%= food.review_score_percentage %>%">★★★★★</div>
+                    <div class="star-rating-back">★★★★★</div>
+                  </div>
+                  <div class="average-score-display ml-3 pt-2">
+                    <%= food.average_score %>点（<%= food.food_comments.count %>件のレビュー）
+                  </div>
+                </div>
+              </div>
+            </div>
+            <footer class="card-footer">
+              <%= link_to food_food_comments_path(food), class: "button card-footer-item" do %>
+                レビューを見る
+              <% end %>
+              <%= link_to food_path(food), class: "button card-footer-item" do %>
+                レビューを書く
+              <% end %>
+            </footer>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</section>
