--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,7 +1,14 @@
 <div class="top_image">
-	<div class="container">
+	<div id="container">
 		<div class="col-xs-12" style="margin-top: 250px; text-align: center; color: #fff;">
 			<h1>あなたの好きなラーメンを共有しませんか？</h1>
+		  	<div id="theTarget">
+			    <div class="0"></div>
+			    <div class="1"></div>
+			    <div class="2"></div>
+			    <div class="3"></div>
+			    <div class="4"></div>
+ 			</div>
 		</div>
 	</div>
 </div>
