--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://kit.fontawesome.com/8359fac63d.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header class="navbar navbar-fixed-top navbar-inverse">
@@ -13,20 +14,21 @@
         <div class="row">
           <div class="col-xs-12">
           <nav class="nav navbar-nav navbar-left">
-            <span>Ramens</span>
+            <span>Ramen Map</span>
           </nav>
           <nav>
             <ul class="nav navbar-nav navbar-right">
               <% if user_signed_in? %>
-                <li><%= link_to ' home', user_path(current_user), class: 'glyphicon glyphicon-home home' %></li>
-                <li><%= link_to ' users', users_path, class: 'glyphicon glyphicon-user users' %></li>
-                <li><%= link_to ' foods', foods_path, class: 'glyphicon glyphicon-book books' %></li>
-                <li><%= link_to ' logout', destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out logout' %></li>
+                <li><%= link_to ' ホーム', user_path(current_user), class: 'glyphicon glyphicon-home home' %></li>
+                <li><%= link_to ' ユーザー一覧', users_path, class: 'glyphicon glyphicon-user users' %></li>
+                <li><%= link_to ' レビュー一覧', foods_path, class: 'glyphicon glyphicon-book books' %></li>
+                <li><%= link_to ' ランキング ', rank_path , class: 'glyphicon glyphicon-signal rankings' %></li>
+                <li><%= link_to ' ログアウト', destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out logout' %></li>
               <% else %>
-                <li><%= link_to ' Home', root_path, class: 'glyphicon glyphicon-home home' %></li>
-                <li><%= link_to ' About', home_about_path, class: 'glyphicon glyphicon-link about' %></li>
-                <li><%= link_to ' Sign Up', new_user_registration_path, class: 'glyphicon glyphicon-edit sign_up' %></li>
-                <li><%= link_to ' login', new_user_session_path, class: 'glyphicon glyphicon-log-in sign_in' %></li>
+                <li><%= link_to ' ホーム', root_path, class: 'glyphicon glyphicon-home home' %></li>
+                <li><%= link_to ' サイト概要', home_about_path, class: 'glyphicon glyphicon-link about' %></li>
+                <li><%= link_to ' 新規登録', new_user_registration_path, class: 'glyphicon glyphicon-edit sign_up' %></li>
+                <li><%= link_to ' ログイン', new_user_session_path, class: 'glyphicon glyphicon-log-in sign_in' %></li>
               <% end %>
             </ul>
           </nav>
