--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,8 +10,8 @@
 				<h1>ユーザー一覧</h1>
 				<thead>
 					<tr>
-						<th>image</th>
-						<th>name</th>
+						<th>イメージ</th>
+						<th>名前</th>
 						<th colspan="3"></th>
 					</tr>
 				</thead>
