--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,13 +5,13 @@
 			<%= render 'foods/newfood', food: @food %>
 		</div>
 		<div class="col-xs-9">
-			<h2>ユーザー紹介</h2>
+			<h2>ユーザー紹介</h2><br>
 			<table class="table table-hover table-inverse">
 				<thead>
 					<tr>
 						<th></th>
-						<th>Title</th>
-						<th>Opinion</th>
+						<th>タイトル</th>
+						<th>投稿内容</th>
 						<th colspan="3"></th>
 					</tr>
 				</thead>
@@ -24,7 +24,7 @@
 								<% end %>
 							</td>
 							<td><%= link_to food.title, food_path(food), class: "food_#{food.id}" %></td>
-							<td><%= food.body %></td>
+							<td><%= simple_format food.body %></td>
 							<td>
 								<%= link_to "#{food.food_comments.count} コメント", food_path(food.id) %>
 							</td>
