--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,13 +17,10 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "bulma";
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Sawarabi+Gothic&display=swap');
 
 header {
 	background-image: linear-gradient(to top, #fcc5e4 0%, #fda34b 15%, #ff7882 35%, #c8699e 52%, #7046aa 71%, #0c1db8 87%, #020f75 100%);
-}
-
-.nav navbar-nav navbar-right {
-	color:blue;
 }
 
 body {
@@ -33,3 +30,7 @@ body {
 	font-family: sans-serif;
 }
 
+.navbar-anton {
+	font-size: 40px;
+	font-family: 'Anton', sans-serif;
+}
