--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,11 @@
+<link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet" />
 <div class="container">
 	<div class="row">
 		<div class="col-xs-3">
 			<%= render 'users/profile', user: @user %>
 			<%= render 'foods/newfood', food: @food %>
 		</div>
-		<div class="col-xs-9">
+		<div class="col-xs-9 nicomoji">
 			<h2>ユーザー紹介</h2><br>
 			<table class="table table-hover table-inverse">
 				<thead>
