--- a/app/views/food_comments/index.html.erb
+++ b/app/views/food_comments/index.html.erb
@@ -16,6 +16,7 @@
               </div>
               <div class="average-score-display ml-3 pt-2">
                 <%= @food.average_score %>点（<%= @food.food_comments.count %>件のレビュー）
+                <%= @food.user.name %>
               </div>
             </div>
           </div>
