--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -2,12 +2,12 @@
 	<div id="container">
 		<div class="col-xs-12" style="margin-top: 250px; text-align: center; color: #fff;">
 			<h1>あなたの好きなラーメンを共有しませんか？</h1>
-		  	<div id="theTarget">
-			    <div class="0"></div>
-			    <div class="1"></div>
-			    <div class="2"></div>
-			    <div class="3"></div>
-			    <div class="4"></div>
+		  	<div class="theTarget">
+			    <div class="0">1</div>
+			    <div class="1">2</div>
+			    <div class="2">3</div>
+			    <div class="3">4</div>
+			    <div class="4">5</div>
  			</div>
 		</div>
 	</div>
