--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Sawarabi+Gothic&display=swap" rel="stylesheet">
 <html>
   <head>
     <title>RamenMap</title>
@@ -7,13 +8,16 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script src="https://kit.fontawesome.com/8359fac63d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   </head>
   <body>
     <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
-          <nav class="nav navbar-nav navbar-left">
+          <nav class="nav navbar-nav navbar-anton">
             <span>Ramen Map</span>
           </nav>
           <nav>
@@ -49,12 +53,12 @@
           <div class="col-xs-3 col-xs-offset-9">
             <%= render 'searchs/search', user: @user %>
           </div>
+          <ul class="nav navbar-nav navbar-right">
+            <p>Ramen Map D.W</p>
+          </ul>
         </div>
       </div>
     </footer>
     <%= yield %>
-    <ul class="nav navbar-nav navbar-right">
-      <p>Ramen Map D.W</p>
-    </ul>
   </body>
 </html>
