--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,14 +1,14 @@
 <div class="top_image">
-	<div id="container">
-		<div class="col-xs-12" style="margin-top: 250px; text-align: center; color: #fff;">
-			<h1>あなたの好きなラーメンを共有しませんか？</h1>
-		  	<div class="theTarget">
-			    <div class="0">1</div>
-			    <div class="1">2</div>
-			    <div class="2">3</div>
-			    <div class="3">4</div>
-			    <div class="4">5</div>
+	<div class="col-xs-12" style=" text-align: center; color: #fff;">
+		<div id="image-skkipr">
+			<font size="7" class="font-top" >あなたの大好きなラーメンを共有しませんか？</font>
+		  	<div class="image-top">
+			    <div class="ramen-a"></div>
+			    <div class="ramen-b"></div>
+			    <div class="ramen-c"></div>
+			    <div class="ramen-d"></div>
+			    <div class="ramen-e"></div>
  			</div>
-		</div>
+ 		</div>
 	</div>
 </div>
