--- a/app/views/users/rank.html.erb
+++ b/app/views/users/rank.html.erb
@@ -1,4 +1,7 @@
 <div class="container">
+	          <div class="col-xs-3 col-xs-offset-9">
+            <%= render 'searchs/search', user: @user %>
+          </div>
     <div class="columns is-centered">
       	<div class="column is-8">
 		<h1>人気TOP10ランキング</h1><br>
