--- a/app/assets/stylesheets/foods.scss
+++ b/app/assets/stylesheets/foods.scss
@@ -25,3 +25,11 @@
 .average-score-display {
   font-size: 16px;
 }
+
+.card-header-title {
+  background-image: linear-gradient(to right, #eea2a2 0%, #bbc1bf 19%, #57c6e1 42%, #b49fda 79%, #7ac5d8 100%);
+}
+
+.font-poji {
+  position: relative; left: 100px;
+}
