--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,100 +1,62 @@
 <div class="container">
+	<div class="col-xs-3 col-xs-offset-9">
+        <%= render 'searchs/search', user: @user %>
+    </div>
 	<div class="row">
 		<div class="col-xs-3">
 			<%= render 'users/profile', user: @user %>
 			<%= render 'foods/newfood', food: @food %>
 		</div>
-		<div class="col-xs-9">
-			<table class="table table-striped">
-				<h2>投稿一覧</h2>
-				<thead>
-					<tr>
-						<th>ユーザー</th>
-						<th></th>
-						<th>タイトル</th>
-						<th>コメント</th>
-						<th colspan="3"></th>
-					</tr>
-				</thead>
-				<tbody>
-					<% @foods.each do |food| %>
-						<tr>
+		<strong class="font-poji">サイト内投稿一覧</strong>
+	    <div class="columns is-centered">
+	      <div class="column is-10">
+	        <% @foods.each do |food| %>
+	          <div class="card mb-6">
+	            <div class="card-header">
+		            <p class="card-header-title">
+		              	<td><%= link_to food.title, food_path(food), class: "food_#{food.id}" %></td>
+		            </p>
+	            </div>
+	            <div class="card-content">
+	              <div class="content">
+	                <div class="content average-score">
+	                  <div class="star-rating mb-2">
+	                    <div class="star-rating-front" style="width: <%= food.review_score_percentage %>%">★★★★★</div>
+	                    <div class="star-rating-back">★★★★★</div>
+	                  </div>
+	                  <div class="average-score-display ml-3 pt-2">
+	                  	<table>
+		                  	<tr><%= food.average_score %>点（<%= food.food_comments.count %>件のレビュー)</tr>
+		                  		<tr>
+		                  			<th>プロフィール</th><th>商品画像</th><th>タイトル</th><th>投稿内容</th>
+		                  		</tr>
+		                  	<tr>
 							<td>
 								<%= link_to user_path(food.user) do %>
 									<%= attachment_image_tag(food.user, :profile_image, :fill, 40, 40, fallback: "no-image-mini.jpg") %>
 								<% end %>
 							</td>
-							<td><%= attachment_image_tag food, :food_image, :fill, 40, 40, fallback: "no-image-mini.jpg" %>
-							</td>
+							<td><%= attachment_image_tag food, :food_image, :fill, 40, 40, fallback: "no-image-mini.jpg" %></td>
 							<td><%= link_to food.title, food_path(food), class: "food_#{food.id}" %></td>
 							<td><%= food.body %></td>
 							<td><%= link_to "#{@user.food_comments.count} コメント", user_path(@user.id) %></td>
-							<% if @food.favorited_by?(current_user) %>
-								<td>
-						  			<%= link_to food_favorites_path(food), method: :delete do %>
-						    			<i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
-						    			<%= food.favorites.count %> いいね解除
-						  			<% end %>
-								</td>
-								<% else %>
-								<td>
-						  			<%= link_to food_favorites_path(food), method: :post do %>
-						    			<i class="fa fa-heart-o" aria-hidden="true"></i>
-						    			<%= food.favorites.count %> いいね！
-						  			<% end %>
-								</td>
-							<% end %>
-							<td>
-								<div class="card-link">
-								<%= link_to food_path(food), class: "button card-link-item" do %>
-									レビューを書く
-								<% end %>
-								</div>
-							</td>
-						</tr>
-					<% end %>
-				</tbody>
-			</table>
-		</div>
-	</div>
-</div>
-
-<section class="section mt-6">
-  <div class="container">
-    <div class="columns is-centered">
-      <div class="column is-5">
-        <% @foods.each do |food| %>
-          <div class="card mb-6">
-            <header class="card-header">
-              <p class="card-header-title">
-                <%= food.title %>
-              </p>
-            </header>
-            <div class="card-content">
-              <div class="content">
-                <div class="content average-score">
-                  <div class="star-rating mb-2">
-                    <div class="star-rating-front" style="width: <%= food.review_score_percentage %>%">★★★★★</div>
-                    <div class="star-rating-back">★★★★★</div>
-                  </div>
-                  <div class="average-score-display ml-3 pt-2">
-                    <%= food.average_score %>点（<%= food.food_comments.count %>件のレビュー)
-                    <%= food.user.name %>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <footer class="card-footer">
-              <%= link_to food_food_comments_path(food), class: "button card-footer-item" do %>
-                レビューを見る
-              <% end %>
-              <%= link_to food_path(food), class: "button card-footer-item" do %>
-                レビューを書く
-              <% end %>
-            </footer>
-          </div>
-        <% end %>
-      </div>
-    </div>
-  </div>
-</section>
+							<%= render 'foods/favorite', food:food %>
+							</tr>
+	                    	<tr><%= food.user.name %></tr>
+	                	</table>
+	                  </div>
+	                </div>
+	              </div>
+	            </div>
+	            <footer class="card-footer">
+	              <%= link_to food_food_comments_path(food), class: "button card-footer-item" do %>
+	                レビューを見る
+	              <% end %>
+	              <%= link_to food_path(food), class: "button card-footer-item" do %>
+	                レビューを書く
+	              <% end %>
+	            </footer>
+	          </div>
+	        <% end %>
+	      </div>
+	    </div>
