--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -1,4 +1,7 @@
 <div class="container">
+	<div class="col-xs-3 col-xs-offset-9">
+        <%= render 'searchs/search', user: @user %>
+    </div>
 	<div class="row">
 		<div class="col-xs-3">
 			<%= render 'users/profile', user: @user %>
