--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,15 @@
 <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet" />
 <div class="container">
+	<div class="col-xs-3 col-xs-offset-9">
+        <%= render 'searchs/search', user: @user %>
+    </div>
 	<div class="row">
 		<div class="col-xs-3">
 			<%= render 'users/profile', user: @user %>
 			<%= render 'foods/newfood', food: @food %>
 		</div>
 		<div class="col-xs-9 nicomoji">
-			<h2>ユーザー紹介</h2><br>
+			<h2>ユーザー投稿一覧</h2><br>
 			<table class="table table-hover table-inverse">
 				<thead>
 					<tr>
@@ -21,7 +24,7 @@
 						<tr>
 							<td>
 								<%= link_to user_path(food.user) do %>
-									<%= attachment_image_tag(food.user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %>
+									<%= attachment_image_tag(food.user, :profile_image, :fill, 100, 100, fallback: "no-image-mini.jpg") %>
 								<% end %>
 							</td>
 							<td><%= link_to food.title, food_path(food), class: "food_#{food.id}" %></td>
