--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,5 +1,16 @@
-
-<figure>
-  <img src="../../assets/images/japanese-food-2199962_640.jpg" alt="文字の代替" title="サイト概要">
-  <figcaption class="decorator">ようこそ！！<br>ここでは誰でも自由に、自慢のラーメンを紹介できるサイトです。</figcaption>
-</figure>
+<div class="top_image">
+	<div class="row">
+		<div class="col-xs-12" style=" text-align: center; color: #fff;">
+				<font size="5" class="font-top" >ようこそ！！<br>ここでは誰でも自由に、自慢のラーメンを紹介できるサイトです！<br></font>
+			    <font size="5" class="font-top">あなたのオススメをラーメンをここで他のラーメン好きに共有したり、<br></font>
+				<font size="5" class="font-top">他の方の一押しラーメンを見て、<br>新しい味を知る手助けが出来れば幸いです！！</font>
+			</div>
+		</div>
+		<div class="col-xs-6">
+			<div class="ramen-z"></div>
+		</div>
+		<div class="col-xs-6">
+			<div class="ramen-y"></div>
+		</div>
+	</div>
+</div>
