--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,33 +2,14 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.background {
-	background-image: image-url('japanese-food-2199962_640.jpg');
+.ramen-z {
+	background-image: image-url('takamoto_main.jpg');
+	height: 420PX;
+	width: 720px;
 }
 
-figure {
-  width: 500px;
-  position: relative;
-}
-
-figure img {
-  width: 100%;
-  vertical-align: top;
-}
-
-figure figcaption {
-  font-size: 30px;
-  color: #ffffff;
-  position: absolute;
-  top: 0;
-  display: flex;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  align-items: center;
-  justify-content: center;
-}
-
-.decorator {
-  background-color: rgba(0, 0, 0, 0.7);
+.ramen-y {
+	background-image: image-url('aaqwwa.jpg');
+	height: 420PX;
+	width: 680px;
 }
