--- a/app/views/foods/_favorite.html.erb
+++ b/app/views/foods/_favorite.html.erb
@@ -1,15 +1,15 @@
 <% if @food.favorited_by?(current_user) %>
-	<td>
-			<%= link_to food_favorites_path(food), method: :delete, remote: true do  %>
-			<i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
-			<%= food.favorites.count %> いいね解除
-			<% end %>
+	<td id="food_favorite<%= food.id %>">
+		<%= link_to food_favorites_path(food), method: :delete, remote: true do  %>
+		<i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+		<%= food.favorites.count %> いいね解除
+		<% end %>
 	</td>
 	<% else %>
-	<td>
-			<%= link_to food_favorites_path(food), method: :post, remote: true do %>
-			<i class="fa fa-heart-o" aria-hidden="true"></i>
-			<%= food.favorites.count %> いいね！
-			<% end %>
-		</td>
+	<td id="food_favorite<%= food.id %>">
+		<%= link_to food_favorites_path(food), method: :post, remote: true do %>
+		<i class="fa fa-heart-o" aria-hidden="true"></i>
+		<%= food.favorites.count %> いいね！
+		<% end %>
+	</td>
 <% end %>
