--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
               <% if user_signed_in? %>
                 <li><%= link_to ' マイページ', user_path(current_user), class: 'glyphicon glyphicon-home home' %></li>
                 <li><%= link_to ' ユーザー一覧', users_path, class: 'glyphicon glyphicon-user users' %></li>
-                <li><%= link_to ' レビュー一覧', foods_path, class: 'glyphicon glyphicon-book books' %></li>
+                <li><%= link_to ' 投稿一覧', foods_path, class: 'glyphicon glyphicon-book books' %></li>
                 <li><%= link_to ' ランキング ', rank_path , class: 'glyphicon glyphicon-signal rankings' %></li>
                 <li><%= link_to ' ログアウト', destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out logout' %></li>
               <% else %>
